[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://title/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://fonts/BlackCastleMF.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 59
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
custom_constants/separation = 36

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.164706, 0.164706, 1 )
text = "WIZARD CONQUEST"
align = 1

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 493.0
margin_top = 104.0
margin_right = 587.0
margin_bottom = 151.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start"
flat = true

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 515.0
margin_top = 187.0
margin_right = 565.0
margin_bottom = 214.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
